@startuml
skinparam shadowing false

interface Term
interface Constant
interface Var
interface Struct
interface Numeric
interface Integer
interface Real
interface Atom
interface Truth
interface Indicator
interface Empty
interface EmptySet
interface EmptyList
interface List
interface Cons
interface Set
interface Tuple

Term <|-down- Struct
Term <|-down- Constant
Term <|-down- Var

Constant <|-down- Numeric
Constant <|-down- Atom

Numeric <|-down- Real
Numeric <|-down- Integer

Struct <|-down- Atom
Struct <|-down- List
Struct <|-down- Tuple
Struct <|-down- Set
Struct <|-down- Indicator

Atom <|-down- Truth
Atom <|-down- Empty

Empty <|-up- EmptyList
Empty <|-up- EmptySet

List <|-down- EmptyList
List <|-down- Cons
Set <|-down- EmptySet

package clauses <<Rectangle>> {

    interface Clause
    interface Rule
    interface Directive
    interface Fact
    Struct <|-down- Clause
    Clause <|-down- Rule
    Clause <|-down- Directive
    Rule <|-down- Fact

}
@enduml